Added Model/Array and Multiple components

--- a/profile-demo/src/app/app.component.html
+++ b/profile-demo/src/app/app.component.html
@@ -9,7 +9,36 @@
     </div>    
     <div class="row">
         <div class="col">
-            <app-personal-details></app-personal-details>
+            <div class="card">
+                <div class="card-header bg-info text-datk">
+                    Personal Details
+                </div>
+                <div class="car-body">
+                    <app-personal-details></app-personal-details>
+                </div>
+            </div>            
+        </div>
+        <div class="col">
+            <div class="card">
+                <div class="card-header bg-success text-info">
+                    Education Details
+                </div>
+                <div class="card-body">
+                    <app-education-detail></app-education-detail>
+                </div>
+            </div>
+        </div>
+    </div>    
+    <div class="row">
+        <div class="col">
+            <div class="card">
+                <div class="card-header">
+                    Skills
+                </div>                
+                <div class="card-body">
+                    <app-skills></app-skills>
+                </div>
+            </div>            
         </div>
     </div>
 </div>
