--- a/profile-demo/src/app/personal-details/personal-details.component.html
+++ b/profile-demo/src/app/personal-details/personal-details.component.html
@@ -2,15 +2,19 @@
     <thead>
         <tr>
             <th>Name</th>
-            <th>Age</th>
-            <th>Gender</th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr>
             <td>{{lastName}}, {{firstName}}</td>
-            <td>{{age}}</td>
-            <td>{{gender}}</td>
         </tr>
-    </tbody>
+        <tr>    
+            <th>Age</th>
+            <td>{{age}}</td>
+        </tr>    
+        <tr>
+            <th>Gender</th>
+            <td>{{gender}}</td>
+        </tr>    
+        <tr>
+            <th>Date Of Birth</th>
+            <td>{{dateOfBirth | date : 'dd/MM/yyyy'}}</td>
+        </tr>                    
+    </thead>    
 </table>
