--- a/forms-demo/src/app/app.component.html
+++ b/forms-demo/src/app/app.component.html
@@ -1,12 +1,22 @@
 <div class="container">
-  <div class="row">
+  <div class="row m-1">
     <div class="col">
       <h1>{{title}}</h1>
     </div>
   </div>
-  <div class="row">
+  <div class="row m-1">
     <div class="col">
       <app-course-entry></app-course-entry>
+    </div>
+  </div>
+  <div class="row m-1">
+    <div class="col">
+      <hr>
+    </div>
+  </div>
+  <div class="row m-1">
+    <div class="col">
+      <app-person-entry></app-person-entry>
     </div>
   </div>
 </div>
