Added Reactive Forms with Array adn groups

--- a/forms-demo/src/app/app.component.html
+++ b/forms-demo/src/app/app.component.html
@@ -19,4 +19,14 @@
       <app-person-entry></app-person-entry>
     </div>
   </div>
+  <div class="row m-1">
+    <div class="col">
+      <hr>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col">
+      <app-item-entry></app-item-entry>
+    </div>
+  </div>
 </div>
