--- a/forms-demo/src/app/person-entry/person-entry.component.html
+++ b/forms-demo/src/app/person-entry/person-entry.component.html
@@ -44,9 +44,54 @@
             <input type="text" class="form-control" formControlName="city">
         </div>
     </div>
+    <div formArrayName="hobby">
+        <div class="row m-1" *ngFor="let control of personForm.get('hobby')['controls'];let i=index" >
+            <div class="col-sm-4">
+                Hobby {{i+1}}: 
+            </div>
+            <div class="col-sm-4">
+                <input type="text" [name]="i" class="form-control" [formControlName]="i">
+            </div>
+            <div class="col-sm-4">
+                <button class="btn btn-info" type="button" (click)="addNew()">Add More</button>
+            </div>
+        </div>
+    </div>    
     <div class="row m-1">
         <div class="col">
-            <button class="btn btn-success" [disabled]="personForm.invalid">Submit</button>
+            <button class="btn btn-success m-1" [disabled]="personForm.invalid">Submit</button>
+            <button class="btn btn-secondary m-1" type="button" (click)="resetForm()">Reset</button>
         </div>
     </div>
 </form>
+<hr>
+<div class="row m-1" *ngIf="isSubmitted">
+    <div class="col">
+        <table class="table table-bordered">
+            <tr>
+                <th>Name : </th>
+                <td>{{person.name}}</td>
+            </tr>
+            <tr>
+                <th>Email : </th>
+                <td>{{person.email}}</td>
+            </tr>
+            <tr>
+                <th>Mobile No :</th>
+                <td>{{person.mobileNo}}</td>
+            </tr>
+            <tr>
+                <th>City : </th>
+                <td>{{person.city}}</td>
+            </tr>
+            <tr>
+                <th>Hobbies</th>
+                <td>
+                    <li *ngFor="let hb of person.hobby">
+                        {{hb}}
+                    </li>
+                </td>
+            </tr>
+        </table>
+    </div>
+</div>
