--- a/material-demo/src/app/student-list/student-list.component.html
+++ b/material-demo/src/app/student-list/student-list.component.html
@@ -34,6 +34,20 @@
       <td mat-cell *matCellDef="let row">{{row.email}}</td>
     </ng-container>
 
+    <!-- Id Column -->
+    <ng-container matColumnDef="action">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Action</th>
+      <td mat-cell *matCellDef="let row">        
+        <button mat-button color="primary" type="button" (click)="edit(row.id)">
+          <mat-icon>edit</mat-icon>
+        </button>
+        <button mat-button color="accent"  type="button" (click)="delete(row.id)">
+          <mat-icon>delete</mat-icon>
+        </button>
+      </td>
+    </ng-container>
+
+
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
   </table>
