Added Auth Guard in Material Demo

--- a/material-demo/src/app/nav/nav.component.html
+++ b/material-demo/src/app/nav/nav.component.html
@@ -8,6 +8,7 @@
       <a mat-list-item [routerLink]="'dashboard'">Dashboard</a>
       <a mat-list-item [routerLink]="'student-list'">Manage Students</a>
       <a mat-list-item [routerLink]="'student-entry'">Student Entry</a>
+      <a mat-list-item [routerLink]="'/logout'">Signout</a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
